updated html tags.

--- a/entities/templates/patient_entry_form.html
+++ b/entities/templates/patient_entry_form.html
@@ -6,7 +6,7 @@
         <title>Patient Entry form</title>
         <h1>Patient entry form</h1>
         <div class="container_default_section">
-            <label>Date</label> <br>
+            <label>Date</label>
             <input type="date" id="date" name="date"/>
             <label>Clinic Name</label>
             <input type="text" id="cnc_name" name="clinic_name"/> <br>
@@ -21,9 +21,21 @@
             <label>Middle Name</label>
             <input type="text" id="middle_name" name="middle_name"/>
             <label>Contact Number</label>
-            <input type="contact_number" id="contact_num" name="emg_contact_num" min="1" max="10"/> <br>
+            <input type="number" id="contact_num" name="emg_contact_num" min="1" max="10"/> <br>
             <label>Last Name</label>
             <input type="text" id="lastname" name="last_name">
+            <label>Email id</label>
+            <input type="text" id="emergency_email_id" name="Emergency_Email_id"/> <br>
+            <label>Gender</label>
+            <select id="gender" name="gender">
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+                <option value="other">Other</option>
+            </select> <br>
+            <label>Age</label>
+            <input type="number" id="age" name="age" min="1" max="3"/> <br>
+            <label>Health</label>
+            <input type="text" id="health" name="health"> <br>
             <label>Email id</label>
             <input type="text" id="email_id" name="Email_id"/> <br>
             <label>Contact number</label>
@@ -43,6 +55,7 @@
             <input type="number" id="pin_code" name="Pin_Code"/>
         </div>
         <div class="container_doctor_physician_details_section">
+            <label>Doctor/Physician Details</label> <br> <br>
             <label>Name</label>
             <select id="doctors" name="doctors">
                 <option value="doctor1">Doctor 1</option>
