--- a/entities/static/css/patient_entry_form_style.css
+++ b/entities/static/css/patient_entry_form_style.css
@@ -3,7 +3,6 @@ body {
     width: 100vw;
     height: 100vh;
     background: #ecf0f3;
-    text-align: center;
     font-family: poppins;
 }
 
@@ -13,6 +12,7 @@ body {
     height: 150px;
     border-radius: 20px;
     padding: 40px;
+    margin-bottom:20px;
     box-sizing: border-box;
     background: #ecf0f3;
     box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
@@ -21,9 +21,10 @@ body {
 .container_patient_details_section {
     position: relative;
     width: 600px;
-    height: 550px;
+    height: 400px;
     border-radius: 20px;
     padding: 40px;
+    margin-bottom:20px;
     box-sizing: border-box;
     background: #ecf0f3;
     box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
@@ -35,6 +36,7 @@ body {
     height: 250px;
     border-radius: 20px;
     padding: 40px;
+    margin-bottom:20px;
     box-sizing: border-box;
     background: #ecf0f3;
     box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
@@ -43,9 +45,10 @@ body {
 .container_doctor_physician_details_section {
     position: relative;
     width: 600px;
-    height: 250px;
+    height: 180px;
     border-radius: 20px;
     padding: 40px;
+    margin-bottom:20px;
     box-sizing: border-box;
     background: #ecf0f3;
     box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
