--- a/entities/templates/patient_entry_form.html
+++ b/entities/templates/patient_entry_form.html
@@ -13,19 +13,19 @@
         </div>
         <div class="container_patient_details_section">
             <label>Patient Details</label> <br> <br>
-            <label>Emergency Contact details</label> <br>
+            <label>Emergency Contact details</label> <br> <br>
             <label>First Name</label>
             <input type="text" id="first_name" name="first_name"/>
             <label>Name</label>
-            <input type="text" id="emg_name" name="emergency_name"/> <br>
+            <input type="text" id="emg_name" name="emergency_name"/> <br> <br>
             <label>Middle Name</label>
             <input type="text" id="middle_name" name="middle_name"/>
             <label>Contact Number</label>
-            <input type="number" id="contact_num" name="emg_contact_num" min="1" max="10"/> <br>
+            <input type="number" id="contact_num" name="emg_contact_num" min="1" max="10"/> <br> <br>
             <label>Last Name</label>
             <input type="text" id="lastname" name="last_name">
             <label>Email id</label>
-            <input type="text" id="emergency_email_id" name="Emergency_Email_id"/> <br>
+            <input type="text" id="emergency_email_id" name="Emergency_Email_id"/> <br> <br>
             <label>Gender</label>
             <select id="gender" name="gender">
                 <option value="male">Male</option>
@@ -33,24 +33,24 @@
                 <option value="other">Other</option>
             </select> <br>
             <label>Age</label>
-            <input type="number" id="age" name="age" min="1" max="3"/> <br>
+            <input type="number" id="age" name="age" min="1" max="3"/> <br> <br>
             <label>Health</label>
-            <input type="text" id="health" name="health"> <br>
+            <input type="text" id="health" name="health"> <br> <br>
             <label>Email id</label>
-            <input type="text" id="email_id" name="Email_id"/> <br>
+            <input type="text" id="email_id" name="Email_id"/> <br> <br>
             <label>Contact number</label>
-            <input type="number" id="contact_number" name="contact_number" min="1" max="10"/> <br>
+            <input type="number" id="contact_number" name="contact_number" min="1" max="10"/> <br> <br>
             <label>Unique Identification Number</label>
             <input type="text" id="unid"  name="Unique_identification_number"/>
         </div>
         <div class="container_patient_location_section">
             <label>Location details</label> <br> <br>
             <label>City/Town</label>
-            <input type="text" id="city_town" name="City_Town"/> <br>
+            <input type="text" id="city_town" name="City_Town"/> <br> <br>
             <label>State</label>
-            <input type="text" id="state" name="State"/> <br>
+            <input type="text" id="state" name="State"/> <br> <br>
             <label>Postal Address</label>
-            <input type="text" id="postal_address" name="Postal_Address"/> <br>
+            <input type="text" id="postal_address" name="Postal_Address"/> <br> <br>
             <label>Pin Code</label>
             <input type="number" id="pin_code" name="Pin_Code"/>
         </div>
@@ -64,7 +64,7 @@
                 <option value="doctor4">Doctor 4</option>
             </select> <br>
             <label>Visit Number</label>
-            <input type="number" id="visit_number" name="Visit_Number"/> <br>
+            <input type="number" id="visit_number" name="Visit_Number"/> <br> <br>
             <label>Time</label>
             <input type="time" id="visit_time" name="Visit_Time"/>
         </div>
