Added login form.

--- a/entities/templates/patient_entry_form.html
+++ b/entities/templates/patient_entry_form.html
@@ -34,8 +34,8 @@
             </select> <br>
             <label>Age</label>
             <input type="number" id="age" name="age" min="1" max="3"/> <br> <br>
-            <label>Health</label>
-            <input type="text" id="health" name="health"> <br> <br>
+            <label>Health Issue</label>
+            <input type="text" id="health" name="health_issue"> <br> <br>
             <label>Email id</label>
             <input type="text" id="email_id" name="Email_id"/> <br> <br>
             <label>Contact number</label>
