--- a/entities/static/css/patient_entry_form_style.css
+++ b/entities/static/css/patient_entry_form_style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300&display=swap');
+
 body {
     margin: 0;
     width: 100vw;
@@ -8,7 +10,7 @@ body {
 
 .container_default_section {
     position: relative;
-    width: 800px;
+    width: 850px;
     height: 150px;
     border-radius: 20px;
     padding: 40px;
@@ -20,8 +22,8 @@ body {
 
 .container_patient_details_section {
     position: relative;
-    width: 800px;
-    height: 600px;
+    width: 850px;
+    height: 775px;
     border-radius: 20px;
     padding: 40px;
     margin-bottom:20px;
@@ -30,10 +32,11 @@ body {
     box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
 }
 
+
 .container_patient_location_section {
     position: relative;
-    width: 600px;
-    height: 550px;
+    width: 850px;
+    height: 425px;
     border-radius: 20px;
     padding: 40px;
     margin-bottom:20px;
@@ -44,8 +47,8 @@ body {
 
 .container_doctor_physician_details_section {
     position: relative;
-    width: 600px;
-    height: 350px;
+    width: 850px;
+    height: 300px;
     border-radius: 20px;
     padding: 40px;
     margin-bottom:20px;
@@ -55,19 +58,22 @@ body {
 }
 
 input {
-  display: in-line;
+  display: inline-block;
   background: #ecf0f3;
   padding: 10px;
   padding-left: 40px;
   height: 50px;
   font-size: 14px;
   border-radius: 50px;
+  width: 180px;
   box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px white;
 }
 
 label {
-  display: in-line;
-  width: 200px;
+  display: inline-block;
+  width: 180px;
+  margin-left: 15px;
+  padding: 5px;
   margin-bottom: 4px;
   box-sizing: border-box;
 }
