interfaced with sqllite database.

--- a/entities/templates/patient_entry_form.html
+++ b/entities/templates/patient_entry_form.html
@@ -21,7 +21,7 @@
             <label>Middle Name</label>
             <input type="text" id="middle_name" name="middle_name"/>
             <label>Contact Number</label>
-            <input type="number" id="contact_num" name="emg_contact_num" min="1" max="10"/> <br> <br>
+            <input type="number" id="contact_num" name="emg_contact_num"/> <br> <br>
             <label>Last Name</label>
             <input type="text" id="lastname" name="last_name">
             <label>Email id</label>
@@ -67,6 +67,7 @@
             <input type="number" id="visit_number" name="Visit_Number"/> <br> <br>
             <label>Time</label>
             <input type="time" id="visit_time" name="Visit_Time"/>
+            <button type="submit">Save & Submit</button>
         </div>
     </head>
 </body>
