--- a/entities/static/css/patient_entry_form_style.css
+++ b/entities/static/css/patient_entry_form_style.css
@@ -77,3 +77,19 @@ label {
   margin-bottom: 4px;
   box-sizing: border-box;
 }
+
+button {
+  display: flex;
+  margin-top: 20px;
+  background: #1DA1F2;
+  height: 40px;
+  border-radius: 20px;
+  cursor: pointer;
+  font-weight: 900;
+  box-shadow: 6px 6px 6px #cbced1, -6px -6px 6px white;
+  transition: 0.5s;
+}
+
+button:hover {
+  box-shadow: none;
+}
