data inserted in database and validated the same.

--- a/entities/templates/patient_entry_form.html
+++ b/entities/templates/patient_entry_form.html
@@ -25,34 +25,35 @@
             <label>Last Name</label>
             <input type="text" id="lastname" name="last_name">
             <label>Email id</label>
-            <input type="text" id="emergency_email_id" name="Emergency_Email_id"/> <br> <br>
+            <input type="text" id="emergency_email_id" name="emergency_email_id"/> <br> <br>
             <label>Gender</label>
             <select id="gender" name="gender">
+                <option value="select">Select</option>
                 <option value="male">Male</option>
                 <option value="female">Female</option>
                 <option value="other">Other</option>
             </select> <br>
             <label>Age</label>
-            <input type="number" id="age" name="age" min="1" max="3"/> <br> <br>
+            <input type="number" id="age" name="age"/> <br> <br>
             <label>Health Issue</label>
             <input type="text" id="health" name="health_issue"> <br> <br>
             <label>Email id</label>
-            <input type="text" id="email_id" name="Email_id"/> <br> <br>
+            <input type="text" id="email_id" name="patient_email_id"/> <br> <br>
             <label>Contact number</label>
-            <input type="number" id="contact_number" name="contact_number" min="1" max="10"/> <br> <br>
+            <input type="number" id="contact_number" name="patient_contact_number"/> <br> <br>
             <label>Unique Identification Number</label>
-            <input type="text" id="unid"  name="Unique_identification_number"/>
+            <input type="text" id="unid"  name="unique_identification_number"/>
         </div>
         <div class="container_patient_location_section">
             <label>Location details</label> <br> <br>
             <label>City/Town</label>
-            <input type="text" id="city_town" name="City_Town"/> <br> <br>
+            <input type="text" id="city_town" name="city_town"/> <br> <br>
             <label>State</label>
-            <input type="text" id="state" name="State"/> <br> <br>
+            <input type="text" id="state" name="state"/> <br> <br>
             <label>Postal Address</label>
-            <input type="text" id="postal_address" name="Postal_Address"/> <br> <br>
+            <input type="text" id="postal_address" name="postal_address"/> <br> <br>
             <label>Pin Code</label>
-            <input type="number" id="pin_code" name="Pin_Code"/>
+            <input type="number" id="pin_code" name="pin_code"/>
         </div>
         <div class="container_doctor_physician_details_section">
             <label>Doctor/Physician Details</label> <br> <br>
@@ -64,9 +65,9 @@
                 <option value="doctor4">Doctor 4</option>
             </select> <br>
             <label>Visit Number</label>
-            <input type="number" id="visit_number" name="Visit_Number"/> <br> <br>
+            <input type="number" id="visit_number" name="visit_number"/> <br> <br>
             <label>Time</label>
-            <input type="time" id="visit_time" name="Visit_Time"/>
+            <input type="time" id="visit_time" name="visit_time"/>
             <button type="submit">Save & Submit</button>
         </div>
     </head>
