--- a/entities/static/css/patient_entry_form_style.css
+++ b/entities/static/css/patient_entry_form_style.css
@@ -48,10 +48,10 @@ body {
 .container_doctor_physician_details_section {
     position: relative;
     width: 850px;
-    height: 300px;
+    height: 330px;
     border-radius: 20px;
     padding: 40px;
-    margin-bottom:20px;
+    margin-bottom:30px;
     box-sizing: border-box;
     background: #ecf0f3;
     box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
@@ -82,8 +82,9 @@ button {
   display: flex;
   margin-top: 20px;
   background: #1DA1F2;
-  height: 40px;
-  border-radius: 20px;
+  height: 50px;
+  width: 120px;
+  border-radius: 15px;
   cursor: pointer;
   font-weight: 900;
   box-shadow: 6px 6px 6px #cbced1, -6px -6px 6px white;
