--- a/entities/templates/patient_vitals_form.html
+++ b/entities/templates/patient_vitals_form.html
@@ -22,11 +22,27 @@
       <label>mmhg</label>
       <input type="text" id="bp_status_value" name="bp_status_value"/> <br> <br>
       <label>Pulse rate</label>
-      <input type="text" id="pulse_rate_normal_range_value" name="pulse_rate_normal_range_value"/>
-      <label>bpm</label>
       <input type="text" id="pulse_rate_measured_value" name="pulse_rate_measured_value"/>
       <label>bpm</label>
-      <input type="text" id="pulse_rate_status" name="pulse_rate_status"/>
+      <input type="text" id="pulse_rate_normal_range_value" name="pulse_rate_normal_range_value"/>
+      <label>bpm</label>
+      <input type="text" id="pulse_rate_status" name="pulse_rate_status"/> <br> <br>
+      <label>Oxygen levels</label>
+      <input type="text" id="oxygen_levels_measured_value" name="oxygen_levels_measured_value"/>
+      <label>mm Hg</label>
+      <input type="text" id="oxygen_levels_normal_value" name="oxygen_levels_normal_value"/>
+      <label>mm Hg</label>
+      <input type="text" id="oxygen_levels_status" name="oxygen_levels_status"/> <br> <br>
+      <label>Temperature</label>
+      <input type="text" id="temperature_measured_value" name="temperature_measured_value"/>
+      <label>degree celsius</label>
+      <input type="text" id="temperature_normal_value" name="temperature_normal_value"/>
+      <label>degree celsius</label>
+      <input type="text" id="temperature_status" name="temperature_status_value"/> <br> <br>
+      <label>Height</label>
+      <input type="number" id="height_measured_value" name="height_measured_value"/> <br> <br>
+      <label>Weight</label>
+      <input type="number" id="weight_measured_value" name="weight_measured_value"/>
     </div>
  </head>
 </body>
