added patient_vitals_form_style.css form

--- a/entities/templates/patient_vitals_form.html
+++ b/entities/templates/patient_vitals_form.html
@@ -10,10 +10,15 @@
       <input type="text" id="patient_name" name="patient_name"/>
       <label>Doctor/Physician Name</label>
       <input type="text" id="doctor_physician_name" name="doctor_physician_name"/>
+      <label>Patient's Age</label>
+      <input type="number" id="patient_age" name="patient_age"/>
     </div>
     <div class="container_vitals_values_section">
+      <label></label>
       <label>Measured values</label>
+      <label></label>
       <label>Normal range</label>
+      <label></label>
       <label>Status</label> <br> <br>
       <label>Blood Pressure</label>
       <input type="text" id="bp_measured_value" name="bp_measured_value"/>
@@ -43,6 +48,7 @@
       <input type="number" id="height_measured_value" name="height_measured_value"/> <br> <br>
       <label>Weight</label>
       <input type="number" id="weight_measured_value" name="weight_measured_value"/>
+      <button type="submit">Save & Submit</button>
     </div>
  </head>
 </body>
