--- a/entities/templates/patient_vitals_form.html
+++ b/entities/templates/patient_vitals_form.html
@@ -12,8 +12,11 @@
       <input type="text" id="doctor_physician_name" name="doctor_physician_name"/>
     </div>
     <div class="container_vitals_values_section">
+      <label></label>
       <label>Measured values</label>
+      <label></label>
       <label>Normal range</label>
+      <label></label>
       <label>Status</label> <br> <br>
       <label>Blood Pressure</label>
       <input type="text" id="bp_measured_value" name="bp_measured_value"/>
@@ -43,6 +46,7 @@
       <input type="number" id="height_measured_value" name="height_measured_value"/> <br> <br>
       <label>Weight</label>
       <input type="number" id="weight_measured_value" name="weight_measured_value"/>
+      <button type="submit">Save & Submit</button>
     </div>
  </head>
 </body>
