--- a/entities/templates/homepage_form.html
+++ b/entities/templates/homepage_form.html
@@ -1,4 +1,4 @@
-<form action="/#" method="post">
+<form action="/patient_entry_form/" method="post">
 <head>
     <meta charset="UTF-8">
     <title>Flux Medicenter Homepage</title>
