--- a/entities/templates/patient_vitals_form.html
+++ b/entities/templates/patient_vitals_form.html
@@ -7,11 +7,11 @@
     <h1>Patient Vitals Form</h1>
     <div class="container_default_section">
       <label>Patient Name</label>
-      <input type="text" id="patient_name" name="patient_name"/>
+      <input type="text" id="patient_name" name="patient_name" value="{{patient_name}}"/>
       <label>Doctor/Physician Name</label>
-      <input type="text" id="doctor_physician_name" name="doctor_physician_name"/>
+      <input type="text" id="doctor_physician_name" name="doctor_physician_name" value="{{doctor_physician_name}}"/>
       <label>Patient's Age</label>
-      <input type="number" id="patient_age" name="patient_age"/>
+      <input type="number" id="patient_age" name="patient_age" value="{{patient_age}}"/>
     </div>
     <div class="container_vitals_values_section">
       <label></label>
