--- a/entities/templates/patient_vitals_form.html
+++ b/entities/templates/patient_vitals_form.html
@@ -23,25 +23,25 @@
       <label>Blood Pressure</label>
       <input type="text" id="bp_measured_value" name="bp_measured_value"/>
       <label>mmhg</label>
-      <input type="text" id="bp_normal_range_value" name="bp_normal_range_value"/>
+      <input type="text" id="bp_normal_range_value" name="bp_normal_range_value" value="120/80"/>
       <label>mmhg</label>
       <input type="text" id="bp_status_value" name="bp_status_value"/> <br> <br>
       <label>Pulse rate</label>
       <input type="text" id="pulse_rate_measured_value" name="pulse_rate_measured_value"/>
       <label>bpm</label>
-      <input type="text" id="pulse_rate_normal_range_value" name="pulse_rate_normal_range_value"/>
+      <input type="text" id="pulse_rate_normal_range_value" name="pulse_rate_normal_range_value" value="60-100"/>
       <label>bpm</label>
       <input type="text" id="pulse_rate_status" name="pulse_rate_status"/> <br> <br>
       <label>Oxygen levels</label>
       <input type="text" id="oxygen_levels_measured_value" name="oxygen_levels_measured_value"/>
       <label>mm Hg</label>
-      <input type="text" id="oxygen_levels_normal_value" name="oxygen_levels_normal_value"/>
+      <input type="text" id="oxygen_levels_normal_value" name="oxygen_levels_normal_value" value="95-100"/>
       <label>mm Hg</label>
       <input type="text" id="oxygen_levels_status" name="oxygen_levels_status"/> <br> <br>
       <label>Temperature</label>
       <input type="text" id="temperature_measured_value" name="temperature_measured_value"/>
       <label>degree celsius</label>
-      <input type="text" id="temperature_normal_value" name="temperature_normal_value"/>
+      <input type="text" id="temperature_normal_value" name="temperature_normal_value" value="36-37"/>
       <label>degree celsius</label>
       <input type="text" id="temperature_status" name="temperature_status_value"/> <br> <br>
       <label>Height</label>
